Fix gradle run command issue.