@@ -3,7 +3,24 @@ apply plugin: 'org.openjfx.javafxplugin'
 
 //ext.moduleName = 'demo.main'
 
-//applicationDefaultJvmArgs = ["-Dprism.order=d3d,es2,es1,sw "]
+applicationDefaultJvmArgs = [
+    '--add-exports=javafx.graphics/com.sun.javafx.scene=com.jfoenix',
+    '--add-exports=javafx.graphics/com.sun.javafx.scene.text=com.jfoenix',
+    '--add-exports=javafx.graphics/com.sun.javafx.geom=com.jfoenix',
+    '--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix',
+    '--add-exports=javafx.graphics/com.sun.javafx.util=com.jfoenix',
+    '--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=com.jfoenix',
+    '--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix',
+    '--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix',
+    '--add-exports=javafx.controls/com.sun.javafx.scene.control.inputmap=com.jfoenix',
+    '--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix',
+    '--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix',
+    '--add-exports=javafx.graphics/com.sun.javafx.text=com.jfoenix',
+    '--add-opens=javafx.graphics/javafx.scene=com.jfoenix',
+    '--add-opens=javafx.graphics/javafx.scene.text=com.jfoenix'
+]
+
+
 mainClassName = 'demos.MainDemo'
 
 sourceCompatibility = 11
@@ -11,7 +28,7 @@ targetCompatibility = 11
 
 javafx {
     version = '11.0.2'
-    modules = [ 'javafx.controls', 'javafx.graphics', 'javafx.fxml' ] 
+    modules = [ 'javafx.controls', 'javafx.graphics', 'javafx.fxml' ]
 }
 
 dependencies {
@@ -20,6 +37,7 @@ dependencies {
     implementation 'org.kordamp.ikonli:ikonli-javafx:11.3.4'
     implementation 'org.kordamp.ikonli:ikonli-fontawesome5-pack:11.3.4'
     implementation project(':jfoenix')
-    
+
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 }
+
